{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 1235,
  "lineage": "e603aaec-a131-58d1-36e5-86a631c0eaea",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/frontendIPConfigurations/alb_ip_config",
                "inbound_nat_rules": [
                  "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/inboundNatRules/VM_Subnet_Three_Connect"
                ],
                "name": "alb_ip_config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/alb_public_ip"
              }
            ],
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer",
            "location": "eastus",
            "name": "CTC_LoadBalancer",
            "resource_group_name": "CTC_Resource_Group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/backendAddressPools/Backend_Address_Pool_ALB",
            "loadbalancer_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer",
            "name": "Backend_Address_Pool_ALB",
            "resource_group_name": "CTC_Resource_Group"
          },
          "dependencies": [
            "azurerm_lb.load_balancer",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "nat_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three/ipConfigurations/Network_Interface_Subnet3",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/frontendIPConfigurations/alb_ip_config",
            "frontend_ip_configuration_name": "alb_ip_config",
            "frontend_port": 80,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/inboundNatRules/VM_Subnet_Three_Connect",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer",
            "name": "VM_Subnet_Three_Connect",
            "protocol": "Tcp",
            "resource_group_name": "CTC_Resource_Group"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_lb.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/alb_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.227.194",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "alb_public_ip",
            "resource_group_name": "CTC_Resource_Group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_four",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub4",
            "name": "Sub4",
            "resource_group_name": "CTC_Resource_Group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "CTC_VNet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub2",
            "name": "Sub2",
            "resource_group_name": "CTC_Resource_Group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "CTC_VNet"
          },
          "dependencies": [
            "azurerm_virtual_network.virtual_network",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c0f5e62d-dbe6-445a-a680-ec1f3b843be0",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet",
            "location": "eastus",
            "name": "CTC_VNet",
            "resource_group_name": "CTC_Resource_Group",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub1",
                "name": "Sub1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub2",
                "name": "Sub2"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub3",
                "name": "Sub3"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub4",
                "name": "Sub4"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone0",
            "internal_domain_name_suffix": "fxtplqhg1nnejjua3qptxbb12a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Network_Interface_Subnet1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_One0",
                "subnet_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-99-28-75",
            "name": "networkinterfacesubone0",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "CTC_Resource_Group",
            "virtual_machine_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Compute/virtualMachines/LinuxVMSubnetOne0"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_one.azurerm_public_ip.public_ip",
            "module.subnet_components_one.azurerm_subnet.subnet_one"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone1",
            "internal_domain_name_suffix": "fxtplqhg1nnejjua3qptxbb12a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Network_Interface_Subnet1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_One1",
                "subnet_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-99-21-D0",
            "name": "networkinterfacesubone1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "CTC_Resource_Group",
            "virtual_machine_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Compute/virtualMachines/LinuxVMSubnetOne1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_one.azurerm_public_ip.public_ip",
            "module.subnet_components_one.azurerm_subnet.subnet_one"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "network_interface_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone0|/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One0",
            "network_interface_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone0",
            "network_security_group_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One0"
          },
          "dependencies": [
            "module.subnet_components_one.azurerm_network_interface.network_interface",
            "module.subnet_components_one.azurerm_network_security_group.nsg",
            "module.subnet_components_one.azurerm_public_ip.public_ip",
            "module.subnet_components_one.azurerm_subnet.subnet_one",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone1|/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One1",
            "network_interface_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/networkinterfacesubone1",
            "network_security_group_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One1"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_one.azurerm_network_interface.network_interface",
            "module.subnet_components_one.azurerm_network_security_group.nsg",
            "module.subnet_components_one.azurerm_public_ip.public_ip",
            "module.subnet_components_one.azurerm_subnet.subnet_one"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One0",
            "location": "eastus",
            "name": "NSG_Subnet_One0",
            "resource_group_name": "CTC_Resource_Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VM_NSG_Rule0",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One1",
            "location": "eastus",
            "name": "NSG_Subnet_One1",
            "resource_group_name": "CTC_Resource_Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH_VM_NSG_Rule1",
                "priority": 100,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One0/securityRules/SSH_VM_NSG_Rule0",
            "name": "SSH_VM_NSG_Rule0",
            "network_security_group_name": "NSG_Subnet_One0",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "CTC_Resource_Group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.subnet_components_one.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/NSG_Subnet_One1/securityRules/SSH_VM_NSG_Rule1",
            "name": "SSH_VM_NSG_Rule1",
            "network_security_group_name": "NSG_Subnet_One1",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "CTC_Resource_Group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.subnet_components_one.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_One0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.26.162",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "access_public_ip_Subnet_One0",
            "resource_group_name": "CTC_Resource_Group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_One1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.27.50",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "access_public_ip_Subnet_One1",
            "resource_group_name": "CTC_Resource_Group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_one",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub1",
            "name": "Sub1",
            "resource_group_name": "CTC_Resource_Group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "CTC_VNet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three",
            "internal_domain_name_suffix": "fxtplqhg1nnejjua3qptxbb12a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Network_Interface_Subnet3",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_Three",
                "subnet_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub3"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-99-2F-64",
            "name": "CTC_Network_Interface_VM_Three",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "CTC_Resource_Group",
            "virtual_machine_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Compute/virtualMachines/LinuxVMSubnetThree"
          },
          "dependencies": [
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_three.azurerm_public_ip.access_public_ip",
            "module.subnet_components_three.azurerm_subnet.subnet_three",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "nat_rule_network_interface_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three/ipConfigurations/Network_Interface_Subnet3|/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/inboundNatRules/VM_Subnet_Three_Connect",
            "ip_configuration_name": "Network_Interface_Subnet3",
            "nat_rule_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/loadBalancers/CTC_LoadBalancer/inboundNatRules/VM_Subnet_Three_Connect",
            "network_interface_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three"
          },
          "dependencies": [
            "azurerm_lb_nat_rule.nat_rule",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_three.azurerm_network_interface.network_interface",
            "module.subnet_components_three.azurerm_public_ip.access_public_ip",
            "module.subnet_components_three.azurerm_subnet.subnet_three",
            "azurerm_lb.load_balancer"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "network_interface_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three|/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG",
            "network_interface_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkInterfaces/CTC_Network_Interface_VM_Three",
            "network_security_group_id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network",
            "module.subnet_components_three.azurerm_network_interface.network_interface",
            "module.subnet_components_three.azurerm_network_security_group.nsg",
            "module.subnet_components_three.azurerm_public_ip.access_public_ip",
            "module.subnet_components_three.azurerm_subnet.subnet_three"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG",
            "location": "eastus",
            "name": "Subnet3_VM_NSG",
            "resource_group_name": "CTC_Resource_Group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALB_VM_NSG_Three_RuleSSH",
                "priority": 103,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALB_VM_NSG_Three_Rule",
                "priority": 102,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG/securityRules/ALB_VM_NSG_Three_RuleSSH",
            "name": "ALB_VM_NSG_Three_RuleSSH",
            "network_security_group_name": "Subnet3_VM_NSG",
            "priority": 103,
            "protocol": "TCP",
            "resource_group_name": "CTC_Resource_Group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "module.subnet_components_three.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_open",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG/securityRules/ALB_VM_NSG_Three_Rule",
            "name": "ALB_VM_NSG_Three_Rule",
            "network_security_group_name": "Subnet3_VM_NSG",
            "priority": 102,
            "protocol": "TCP",
            "resource_group_name": "CTC_Resource_Group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet_components_three.azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/networkSecurityGroups/Subnet3_VM_NSG/securityRules/ALB_VM_NSG_Three_Rule",
            "name": "ALB_VM_NSG_Three_Rule",
            "network_security_group_name": "Subnet3_VM_NSG",
            "priority": 102,
            "protocol": "TCP",
            "resource_group_name": "CTC_Resource_Group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet_components_three.azurerm_network_security_group.nsg",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "access_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/publicIPAddresses/access_public_ip_Subnet_Three",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.228.86",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "access_public_ip_Subnet_Three",
            "resource_group_name": "CTC_Resource_Group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_components_three",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6695c113-e2f9-4d17-af9f-fa1d82b6a0be/resourceGroups/CTC_Resource_Group/providers/Microsoft.Network/virtualNetworks/CTC_VNet/subnets/Sub3",
            "name": "Sub3",
            "resource_group_name": "CTC_Resource_Group",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "CTC_VNet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.virtual_network"
          ]
        }
      ]
    }
  ]
}